# favapy

./: .pre-commit-config.yaml  Dockerfile  env.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: requirements.txt
src/favapy/: fava.py  models.py  utils.py
